AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}
SUBDIRS = include prt pgc tgc pillar2c toolkit

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = flrc-lib.pc

EXTRA_DIST = AUTHORS \
             ChangeLog \
             COPYING \
             INSTALL \
             flrc-lib.pc.in \
             README
